// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RemoveEntityButton /> Default properties 1`] = `
<div
  className="col-sm-3 control-label text-left"
>
  <span
    className="container--action-button"
    onClick={
      [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      }
    }
  >
    <i
      className="fa fa-times container--removal-icon"
    />
  </span>
</div>
`;

exports[`<RemoveEntityButton /> Specify entity without index 1`] = `
<div
  className="col-sm-3 control-label text-left"
>
  <span
    className="container--action-button"
    onClick={[MockFunction]}
  >
    <i
      className="fa fa-times container--removal-icon"
    />
     Remove Test 
  </span>
</div>
`;

exports[`<RemoveEntityButton /> Specify label class, index, and entity 1`] = `
<div
  className="test-label-class"
>
  <span
    className="container--action-button"
    onClick={[MockFunction]}
  >
    <i
      className="fa fa-times container--removal-icon"
    />
     Remove Test 3
  </span>
</div>
`;
